add form submit

--- a/annotation-converter/index.html
+++ b/annotation-converter/index.html
@@ -24,6 +24,10 @@
             <option value="cira">Cira CORE</option>
           </select>
         </div>
+        <div class="form-input form-submit">
+          <button type="submit">Convert</button>
+          <button type="button" id="button-clear">Clear</button>
+        </div>
       </form>
       <fieldset id="selected-files">
         <legend>Selected files</legend>
